apps/joyful-service-canary/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: joyful-canary
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {}
        - setWeight: 60
        - pause: {duration: 1m}
        - setWeight: 80
        - pause: {duration: 5m}
  selector:
    matchLabels:
      app: joyful-canary
  template:
    metadata:
      labels:
        app: joyful-canary
    spec:
      containers:
        - name: joyful-canary
          image: sysadminexe/joyful-service:5f11c7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: joyful-canary
spec:
  ports:
    - port: 5000
      targetPort: 8080
  selector:
    app: joyful-canary
